  * Changed all the QML elements to use pixel size instead of font point.